// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarPicture /> <AvatarPicture /> displays fallback src and alt 1`] = `
preact-render-spy (1 nodes)
-------
<img
  src="https://mywebportal.michelin-solutions.com/msn-avatars/73c9c100a15a943fc0446f4b5e880d12.png"
  alt="Avatar"
 />

`;

exports[`<AvatarPicture /> <AvatarPicture /> displays given alt and fallback src 1`] = `
preact-render-spy (1 nodes)
-------
<img
  src="https://mywebportal.michelin-solutions.com/msn-avatars/73c9c100a15a943fc0446f4b5e880d12.png"
  alt="John Doe"
 />

`;

exports[`<AvatarPicture /> <AvatarPicture /> displays given src and alt 1`] = `
preact-render-spy (1 nodes)
-------
<img
  src="https://mywebportal.michelin-solutions.com/msn-avatars/ef0eccf32b62a0c05d98f4b91cfa9a9a.png"
  alt="John Doe"
 />

`;

exports[`<AvatarPicture /> <AvatarPicture /> displays given src and fallback alt 1`] = `
preact-render-spy (1 nodes)
-------
<img
  src="https://mywebportal.michelin-solutions.com/msn-avatars/ef0eccf32b62a0c05d98f4b91cfa9a9a.png"
  alt="Avatar"
 />

`;

exports[`<AvatarPicture /> <AvatarPicture /> take more props in account 1`] = `
preact-render-spy (1 nodes)
-------
<img
  class="className"
  src="https://mywebportal.michelin-solutions.com/msn-avatars/73c9c100a15a943fc0446f4b5e880d12.png"
  alt="Avatar"
 />

`;
